<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_news">News</string>
    <string name="nav_item_Trending">Trending</string>
    <string name="nav_item_Featured">Featured</string>
    <string name="name_user">Abhinav Soni</string>
    <string name="sign_in">Sign In</string>
    <string name="bookmark">Bookmark</string>
    <string name="schedule">Schedule</string>
    <string name="ranking">Ranking</string>
    <string name="schedule_title">Schedule</string>
    <string name="Ranking_title">Ranking</string>
    <string name="Article">Article</string>
    <string name="search">search</string>

    <string name="articlestory">A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground
     forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy.

        Their concept catches on, with underground
     forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground
     forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground
     forming in every town, abhinav n, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground
     forming in every town, </string>

    <string name="world_topic">World</string>
    <string name="biz_topic">Business</string>
    <string name="tech_topic">Technology</string>
    <string name="sports_topic">Sports</string>
    <string name="connection_confirm">Please make sure you are connected to the Internet</string>
    
    <string name="search_hint">Search News</string>
    <string name="Gallery">Gallery</string>
</resources>